--- a/src/html/home.html
+++ b/src/html/home.html
@@ -12,8 +12,8 @@
     <header>
         <a class="logo" href="/">SteamDB Demo</a>
         <form action="/search" method="GET">
-            <input autofocus class="search-input" value=""
-                   placeholder="Enter a news topic" type="search" name="q">
+            <input autofocus class="search-input" value="{{ .SearchKey }}"
+                   placeholder="Search..." type="search" name="q">
         </form>
         <a href="https://github.com/manifure" class="button
       github-button">View on Github</a>
