--- a/src/html/home.html
+++ b/src/html/home.html
@@ -1,61 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My SteamDB</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-<header>
-    <div class="header-content">
-        <a class="logo" href="/">SteamDB Demo</a>
-        <form action="/search" method="GET">
-            <input autofocus class="search-input" value="{{ .SearchKey }}"
-                   placeholder="Search..." type="search" name="q">
-        </form>
-        <a href="https://github.com/Manifure/Go_SteamDB" class="button github-button">View on Github</a>
-    </div>
-</header>
-<main>
-    <section class="container">
-        <div class="result-count">
-            {{ if (gt .TotalResults 0)}}
-                <p><strong>{{ .TotalResults }}</strong> results found.</p>
-            {{ else if (eq .TotalResults 0) }}
-                <p>No results.</p>
-            {{ end }}
-        </div>
-        <ul class="search-results">
-            {{ range .Result }}
-                <li class="game-card">
-                    <a target="_blank" rel="noreferrer noopener" href="https://store.steampowered.com/app/{{ .AppID }}/">
-                        <img class="game-image" src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/{{ .AppID }}/header.jpg" alt="{{ .Name }}">
-                        <div class="game-info">
-                            <h3 class="game-title">{{.Name }}</h3>
-                            <p class="game-id">App ID: {{ .AppID }}</p>
-                        </div>
-                    </a>
-                </li>
-            {{ end }}
-        </ul>
-        <div class="pagination">
-            {{ if .HasPrevPage }}
-                <a href="/search?q={{ .SearchKey }}&page={{ sub .CurrentPage 1 }}" class="page-link"><</a>
-            {{ end }}
-
-            <span class="current-page">{{ .CurrentPage }} of {{ .TotalPages }}</span>
-
-            {{ if .HasNextPage }}
-                <a href="/search?q={{ .SearchKey }}&page={{ add .CurrentPage 1 }}" class="page-link">></a>
-            {{ end }}
-        </div>
-    </section>
-</main>
-<footer>
-    <p>&copy; 2024 SteamDB Demo. All rights reserved.</p>
-</footer>
-</body>
-</html>
+{{ define "home" }}
+    {{ template "header" }}
+    <main>
+        <section class="container">
+            <div class="result-count">
+                    <p>Home page.</p>
+            </div>
+        </section>
+    </main>
+    {{ template "footer" }}
+{{ end }}
