add .env file, little rework project layolt

--- a/html/search.html
+++ b/html/search.html
@@ -9,6 +9,9 @@
                     <p>No results.</p>
                 {{ end }}
             </div>
+            <div class="genre-type">
+
+            </div>
             <ul class="search-results">
                 {{ range .Result }}
                     <li class="game-card">
